@@ -127,6 +127,8 @@
 								horizontal_alignment = "left"
 
 								[button]
+									id = "update_addons"
+
 									# just show how the default looks.
 									definition = "default"
 
@@ -158,6 +160,8 @@
 								horizontal_alignment = "right"
 
 								[button]
+									id = "remove_addons"
+
 									# just show how the default looks.
 									definition = "default"
 
