@@ -32,6 +32,8 @@ Version 1.7.5+svn:
    * Better visually differentiate name, type and race in sidebar.
    * Add colorized terrain defense info in sidebar.
    * In attack dialog, split damages and chance to hit and color the later.
+   * Disable the Remove and Update add-ons buttons when there are no add-ons
+     installed.
 
 
 Version 1.7.5:
