@@ -39,6 +39,8 @@ Version 1.7.5+svn:
    * Better visually differentiate name, type and race in sidebar
    * Add colorized terrain defense info in sidebar
    * In attack dialog, split damages and chance to hit and color the later.
+   * The Remove and Update add-ons options are disabled when there are no
+     add-ons installed
  * WML engine:
    * Fix silent=yes for objectives
    * Allow [story] [part] blocks to specify the title box alignment
